--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ repository = "https://github.com/dahlia/hongdown"
 [dependencies]
 clap = { version = "4.5.54", features = ["derive"] }
 comrak = "0.49.0"
+indexmap = "2.12.1"
