--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -226,6 +226,9 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: [build-wasm]
     runs-on: ubuntu-latest
+    concurrency:
+      group: github-pages
+      cancel-in-progress: false
     permissions:
       pages: write
       id-token: write
@@ -234,12 +237,6 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
     - uses: actions/checkout@v6
-    - uses: dtolnay/rust-toolchain@stable
-      with:
-        targets: wasm32-unknown-unknown
-    - uses: Swatinem/rust-cache@v2
-      with:
-        key: wasm32
     - uses: actions/setup-node@v4
       with:
         node-version: '24'
