Improve demo app and add documentation
This commit includes the following changes:

- Converted demo/src/sample.ts to Markdown file (sample.md)
- Added Vite ?raw import support with TypeScript definitions
- Updated App.tsx to use native Markdown file import
- Added demo application documentation to AGENTS.md
- Documented project architecture, tech stack, and design principles

--- a/.hongdown.toml
+++ b/.hongdown.toml
@@ -1,4 +1,4 @@
 # Hongdown configuration file
 
 include = ["*.md", "**/*.md"]
-exclude = ["target/**", "**/node_modules/**"]
+exclude = ["target/**", "**/node_modules/**", "demo/src/sample.md"]
