Add external code formatter support for code blocks
Add the ability to configure language-specific external formatters that
automatically format code inside fenced code blocks.

Configuration can be specified in .hongdown.toml in two formats:

    [code_block.formatters]
    javascript = ["deno", "fmt", "-"]

    [code_block.formatters.python]
    command = ["black", "-"]
    timeout = 10

Code is passed to formatters via stdin and output is read from stdout.
If a formatter fails (non-zero exit, timeout, etc.), the original code
is preserved and a warning is emitted.

For WASM builds, a new formatWithCodeFormatter() function accepts a
callback for custom formatting logic:

    const { output } = await formatWithCodeFormatter(markdown, {
      codeFormatter: (language, code) => {
        if (language === "javascript") {
          return prettier.format(code, { parser: "babel" });
        }
        return null;
      },
    });

Close https://github.com/dahlia/hongdown/issues/9

--- a/.hongdown.toml
+++ b/.hongdown.toml
@@ -7,3 +7,9 @@ proper_nouns = [
   "Hong Minhee",
   "mise",
 ]
+
+[code_block.formatters]
+javascript = ["deno", "fmt", "--ext=js", "-"]
+json = ["deno", "fmt", "--ext=jsonc", "-"]
+jsonc = ["deno", "fmt", "--ext=jsonc", "-"]
+typescript = ["deno", "fmt", "--ext=ts", "-"]
