Add rustfmt and clippy components to mise rust configuration
Fix CI lint job failure by ensuring rustfmt and clippy are installed
when mise installs the rust toolchain.

--- a/mise.toml
+++ b/mise.toml
@@ -1,5 +1,5 @@
 [tools]
-rust = { version = "latest", profile = "default", components = "rust-analyzer", targets = "wasm32-unknown-unknown" }
+rust = { version = "latest", profile = "default", components = "rust-analyzer,rustfmt,clippy", targets = "wasm32-unknown-unknown" }
 node = "lts"
 pnpm = "latest"
 bun = "latest"
