--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,7 +42,9 @@ jobs:
     - uses: actions/checkout@v6
     - uses: jdx/mise-action@v3
       with:
-        cache_key_prefix: mise-v2
+        cache_key_prefix: mise-v3
+    # Ensure Rust toolchain and components are installed before parallel tasks
+    - run: rustup component add rustfmt clippy
     - run: mise run check
 
   test:
